    o #445398 by casey: reduce_value_options() using wrong value array.
    o #451370 by skwashd: base.js had some DOS line endings.
    o #454754 by dww: Fix PGSQL related errors with comment author filtering.
    o #384286 by dww: Make it possible to expose the filter for "Node: Has new content"
    o #463634 by alienbrain: "Empty field name" incorrectly specified.

  Other changes:
    o #298616: Add argument for node updated time similar to node created time.
    o #325607 by bangpound: Automatically sort exports from bulk export.
    o #323049 by yched: Allow Empty/Not Empty on select many to one.
    o #340701 by swentel: Restore allowing Views to set block caching mode.
    o #347892 by dww: Allow <any> option in Boolean filters.
    o #358314 by brmassa: Catch the exposed filter form so it doesn't process twice on a single view.
    o #154865 by Zack Rosen, josh_k and KarenS: Allow user contact form as a field.
    o #411880 by fgm: Add "options callback" to items using in_operator handler.
    o #360657 by yhahn: new hook_views_default_views_alter().
    o #430068 by dereine: New global counter field for displaying row number.
    o #420340 by derine: Translate node type filter.
    o #325796 by yang_yi_cn: Translate node type argument.
    o #446726 by yhahn: Improved performance for js dependencies.
    o #437760 by leeneman: Remove duplicate terms from taxonomy term argument title.
    o #354270 by dereine: Allow "tag" to be added to the theme template suggestions.
    o #408180 by joachim: Allow taxonomy term parent argument.

Views 2.5
  Bugs fixed:
    o #363817 by thePanz: Empty fields in table could still trigger separators.
    o #388952 by nikita@protsenko.com: Ensure taxonomy term validator sets the validated title when available.
    o #392176: Trim on word boundary would stop at newlines.
    o #415706 by dww: Fix broken relationship in search that caused SQL error.