@@ -13,6 +13,7 @@ Views 2.x
     o #454754 by dww: Fix PGSQL related errors with comment author filtering.
     o #384286 by dww: Make it possible to expose the filter for "Node: Has new content"
     o #463634 by alienbrain: "Empty field name" incorrectly specified.
+    o #463580 by ximo: AJAX summary links broken in some displays.
 
   Other changes:
     o #298616: Add argument for node updated time similar to node created time.
